tests/ui/delegation/glob-bad-path.stderr
error: expected trait, found struct `S`
  --> $DIR/glob-bad-path.rs:9:11
   |
LL |     reuse S::*;
   |           ^ not a trait

error[E0433]: failed to resolve: use of undeclared crate or module `unresolved`
  --> $DIR/glob-bad-path.rs:8:11
   |
LL |     reuse unresolved::*;
   |           ^^^^^^^^^^ use of undeclared crate or module `unresolved`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
